VisionClientProviderTest update